# OurPaparazzi

./: .gitignore  .gitmodules  .travis.yml  Makefile  sonar-project.properties
conf/: abi.dtd  abi.xml  conf_example.xml  conf_tests.xml  conf_tests_coverity.xml  control_panel_mission.xml  messages.xml
conf/airframes/: example_transitioning.xml
conf/airframes/AGGIEAIR/: aggieair_minion_rp3_lia.xml
conf/airframes/TUDELFT/: tudelft_conf.xml  tudelft_lisa_mxs_dshot.xml  tudelft_outback.xml
conf/airframes/examples/: ardrone2_gazebo_cyberzoo.xml  bixler_lisa_m_2.xml  quadrotor_lisa_s.xml
conf/autopilot/: rotorcraft.makefile
conf/flight_plans/: mission_fw.xml
conf/gcs/: vertical.xml
conf/joystick/: frsky_taranis_9xd.xml
conf/modules/: actuators_dshot.xml  ahrs_int_cmpl_euler.xml  crypto.xml  datalink_rc.xml  gps_ubx_ucenter.xml  guidance_hybrid.xml  haclc.xml  telemetry_transparent_crypto_haclc.xml  telemetry_transparent_secure.xml
conf/radios/AGGIEAIR/: aggieair_taranis_datalink.xml
conf/settings/: fixedwing_basic.xml
sw/airborne/: state.c  state.h
sw/airborne/math/: pprz_algebra_int.h  pprz_trig_int.c  pprz_trig_int.h
sw/airborne/mcu_periph/: rng.h
sw/airborne/subsystems/: abi_common.h  abi_event.h  abi_event_static.c  abi_sender_ids.h  gps.c  gps.h
sw/ext/: Makefile
sw/ext/flightgear/: fg_start_minion.sh  fgfs.sh
sw/ext/ivy_logger/: .gitignore  Ivy.cxx  IvyApplication.cxx  IvyApplication.h  Ivycpp.h  (+4 more)
sw/ext/rustlink-forwarder/: Cargo.toml  link_forwarder.sh  rustfmt.toml
sw/ext/rustlink-forwarder/src/: main.rs
sw/tools/: gen_abi.ml
(+75 files in other folders)
